# libvips-rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  build.rs  vips.h
generator/: Cargo.toml  Dockerfile  Makefile  build.rs  introspect.c
src/: bindings.rs  error.rs  image.rs  lib.rs  manual.rs  ops.rs  utils.rs
