# (c) Copyright 2019-2023 MIT
[package]
name = "libvips-rs"
description = "Safe bindings for libvips"
version = "8.15.1"
authors = ["Chandan Pasunoori <chandanpasunoori@gmail.com>"]
repository = "https://github.com/chandanpasunoori/libvips-rust-bindings"
readme = "README.md"
license = "MIT"
edition = "2018"
keywords = ["libvips", "bindgen", "image", "bindings"]
categories = ["multimedia::images", "multimedia::encoding", "graphics"]
exclude = ["generator"]

[dependencies]
num-traits = "0.2"
num-derive = "0.3"
