# (c) Copyright 2019-2023 MIT
[package]
name = "libvips-bindings"
description = "Safe bindings for libvips"
version = "0.0.3"
authors = ["Chandan Pasunoori <chandanpasunoori@gmail.com>"]
repository = "https://github.com/chandanpasunoori/libvips-rust-bindings"
edition = "2018"

[build-dependencies]
bindgen = "0.66.1"
Inflector = "0.11"
cc = "1.0"
which = "4.4.0"

[dependencies]
num-traits = "0.2"
num-derive = "0.3"
