# (c) Copyright 2019-2023 MIT
[package]
name = "libvips-bindings"
description = "Safe bindings for libvips"
version = "0.0.4"
authors = ["Chandan Pasunoori <chandanpasunoori@gmail.com>"]
repository = "https://github.com/chandanpasunoori/libvips-rust-bindings"
edition = "2021"

[build-dependencies]
bindgen = "0.69.2"
Inflector = "0.11"
cc = "1.0"
which = "6"

[dependencies]
num-traits = "0.2"
num-derive = "0.4"
